# AI_Anna_RAG

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  wrangler.toml
.github/workflows/: index-docs.yml
.kiro/specs/anna-discord-qa/: requirements.md  spec.json
.kiro/specs/anna-qa-command/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
bot/: config.py  main.py
bot/cogs/: ask.py
bot/services/: ai.py  search.py
docs/events/: annual-schedule.md
docs/guides/: for-newcomers.md
docs/rules/: club-rules.md
scripts/: indexer.py
src/: commands.ts  index.ts  register.ts  types.ts
src/services/: ai.ts  search.ts
tests/: test_ai_service.py  test_ask_cog.py  test_bot.py  test_config.py  test_indexer.py  test_integration.py  test_search_service.py
